--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.navbar-custom {
+    background-color: #911;
+    
+}
+.bg-custom {
+    background-color: #ea4343; 
+}
+a {
+    color:white!important;
+    text-decoration: none;
+    background-color: transparent;
+}
