--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="card-body">
-  <h4 class="card-title">Virtual 911</h4>
+  <h4 class="card-title">Virtual 911 Pro center</h4>
   <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque</p>
   <div *ngIf="callers.length==0">
     <div class="d-flex justify-content-center">
